--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to A Todo App </h1>
   <p> Static home page in a Rails application.</p>
 
-  <%= button_to "Sign Up Now", new_user_path(@user), method: :get %>
-
+  <%= button_to "Login", new_session_path, method: :get %> <br />
+  <%= button_to "Sign Up", new_user_path(@user), method: :get %>
