--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
 
 <h1><%= @user.username %><h1>
 <h1> <%= @user.email %> <h1>
+
+
+<%= form_tag session_path, method: 'delete' do %>
+    <%=submit_tag "Log out" %>
+    <%end%>
