--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to A Todo App </h1>
-  <p> Static home page in a Rails application.</p>
+  <p> A Todo List Pin to evolve your ideas</p>
+  <p> Log in with a free account to see more! </p>
 
   <%= button_to "Login", new_session_path, method: :get %> <br />
   <%= button_to "Sign Up", new_user_path(@user), method: :get %>
